New update
Users collection created.
